--- a/Libros.csproj
+++ b/Libros.csproj
@@ -46,12 +46,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Clases\Cliente.cs" />
+    <Compile Include="Clases\Editorial.cs" />
+    <Compile Include="Clases\Estudiante.cs" />
+    <Compile Include="Clases\Internacional.cs" />
+    <Compile Include="Clases\Lehmann.cs" />
+    <Compile Include="Clases\Libro.cs" />
+    <Compile Include="Clases\Opcionales.cs" />
+    <Compile Include="Clases\Regalo.cs" />
+    <Compile Include="Clases\Separador.cs" />
+    <Compile Include="Clases\Universal.cs" />
+    <Compile Include="Enums\Genero.cs" />
+    <Compile Include="Facade\FacturaFacade.cs" />
+    <Compile Include="Factory\TiendaFactory.cs" />
     <Compile Include="frmPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmPrincipal.Designer.cs">
       <DependentUpon>frmPrincipal.cs</DependentUpon>
     </Compile>
+    <Compile Include="Interfaz\ITienda.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmPrincipal.resx">
@@ -87,6 +101,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
